Tue Apr 14 15:33:20 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* install-octave.in: Improve error messages if version number or
	host architecture can't be found.

	* install-octave.in: Don't install info reader.

Fri Mar 27 02:54:59 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_F2C_F77_COMPAT): Use a Fortran subroutine
	instead of a function.

Tue Mar 10 17:28:20 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (RLD_FLAG): Use $(octlibdir), not $(libdir).

Mon Mar  2 00:02:26 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* install-octave.in: Explicitly set permissions on ls-R files.

	* configure.in: Don't disable GNU Info on cygwin32 systems.

	* install-octave.in: New file.
	* configure.in: Create install-octave.
	* octMakefile.in (distclean, maintainer-clean): Delete install-octave.
	(DISTFILES): Distribute install-octave.in, not install-octave.

Sun Mar  1 23:15:04 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Fix typo in test for glob and fnmatch headers.

Fri Feb 27 15:43:14 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Fix support for dlopen on SCO systems.

Mon Feb 23 13:06:11 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (ieee_fp_flag): Use -mieee-with-inexact on Alphas.
	Use octave_cv_f77_is_g77, not just f77_is_g77.

Fri Feb 20 00:38:31 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in, Makeconf.in: Try to set things up to use the
	system glob and fnmatch headers and functions if they exist.
	Better handling of include and lib flags.

Thu Feb 19 01:21:19 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't check for gamma or lgamma
	* acconfig.h: Delete undef for HAVE_GAMMA and HAVE_LGAMMA.

Wed Feb 18 15:05:54 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't check for vfork.

Wed Feb 11 19:41:22 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (mk-libdir-link): Don't create link if a directory