@@ -21,7 +21,7 @@ dnl Copyright (C) 1996, 1997 John W. Eaton
 ### Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 ### 02111-1307, USA. 
 
-AC_REVISION($Revision: 1.302 $)
+AC_REVISION($Revision: 1.303 $)
 AC_PREREQ(2.9)
 AC_INIT(src/octave.cc)
 AC_CONFIG_HEADER(config.h)
@@ -102,15 +102,6 @@ OCTAVE_CHECK_EXCLUSIVE_WITH_OPTIONS(g77, f2c,
   [warn_f2c_and_g77="--with-f2c and --with-g77 both specified!  Using g77..."
   AC_MSG_WARN($warn_f2c_and_g77)
   use_f2c=false])
-
-### Allow the user disable support for GNU info.
-
-AC_ARG_ENABLE(info,
-  [  --enable-info           use GNU info (default is yes)],
-  [if test "$enableval" = no; then USE_GNU_INFO=false; fi], [])
-if $USE_GNU_INFO; then
-  AC_DEFINE(USE_GNU_INFO, 1)
-fi
 
 dnl ### Allow the user disable support for plplot.
 dnl 
@@ -1149,7 +1140,6 @@ Octave is now configured for $canonical_host_type
   Fortran compiler:     $FORT
   Fortran libraries:    $FLIBS
   Use GNU readline:     $USE_READLINE
-  Use GNU info reader:  $USE_GNU_INFO
   Default pager:        $DEFAULT_PAGER
   gnuplot:              $GNUPLOT_BINARY
 
@@ -1160,7 +1150,6 @@ Octave is now configured for $canonical_host_type
   Dynamic Linking (dlopen/dlsym):          $WITH_DL
   Dynamic Linking (shl_load/shl_findsym):  $WITH_SHL
   Include support for GNU readline:        $USE_READLINE
-  Include support for the GNU Info reader: $USE_GNU_INFO
 ])
 
 warn_msg_printed=false
